Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ name: $(date:yyyy).$(Month)$(rev:.r)
 steps:
 
 # - script: npm config set registry http://registry.npm.taobao.org/
-# - script: yarn install
+- script: npm install
 
 - task: Gradle@2
   inputs:
